--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.google.android.libraries.places:places-compat:1.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'org.java-websocket:Java-WebSocket:1.4.0'
+    implementation 'org.slf4j:slf4j-android:1.7.26'
 }
